<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InterviewAnnihilator</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter Message</string>
    <string name="button_solutions">Solutions</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_post_solution">Post Solution</string>
    <string name="edit_solution_msg">Enter a solution</string>
    <string name="button_post">Post</string>

    <string-array name="difficulty">
        <item>All</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    
    <string-array name="category">
        <item>All</item>
        <item>CompSci</item>
        <item>Business</item>
        <item>Management</item>
        <item>Logic</item>
        <item>Estimation</item>
        <item>BrainTeaser</item>
        <item>Game</item>
        <item>Math</item>
        <item>Science</item>
    </string-array>
	
    <string name="select">&lt;Select&gt;</string>
    <string name="ad_message">Your Ad Here</string>
    <string name="add_category">Add Category</string>
    <string name="remove_category">Remove Category</string>
    <string name="spinner_difficulty_text">Difficulty</string>
    <string name="spinner_category_text">Category</string>
    <string name="button_show_me_more">Show me more</string>
    <string name="button_post_solution">Submit a Solution</string>
    <string name="button_post_question">Submit a Question</string>
    <string name="error_displaying_question">Error Displaying Question!</string>
    <string name="retryDialog_title">A network error has occurred</string>
    <string name="retryDialog_retry">  Retry  </string>
    <string name="retryDialog_cancel"> Cancel </string>
    <string name="successDialog_title">Your solution was successfully posted.</string>
    <string name="successDialog_title_q">Your question was successfully posted.</string>
    <string name="badInputDialog_solution">Please provide a valid solution.</string>
    <string name="badInputDialog_title">Please provide a valid title.</string>
    <string name="badInputDialog_question">Please provide a valid question.</string>
    <string name="badInputDialog_category">Please provide a valid category.</string>
    <string name="badInputDialog_return">Return to editor</string>
    <string name="button_ok"> OK </string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="sending_text">Sending&#8230;</string>
    <string name="toast_already_voted">You have already voted on this solution</string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_return">Returning&#8230; </string>
    <string name="toast_retry">Trying again&#8230; </string>
    <string name="toast_no_more_questions">There aren\'t any more questions</string>
    <string name="title_activity_post_question">Post A Question</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_question_msg">Enter a question</string>
    <string name="edit_question_title_msg">Enter a descriptive title</string>
    <string name="radio_easy">Easy   </string>
    <string name="radio_medium">Medium   </string>
    <string name="radio_hard">Hard</string>
    <string name="random_question">Random</string>
    <string name="difficulty_post_descriptor">Select a difficulty rank: </string>
    <string name="title_post_descriptor">Title: </string>
    <string name="question_post_descriptor">Question: </string>
    <string name="category_post_descriptor">Category: </string>
    <string name="solution_post_descriptor">Solution: </string>
    <string name="internalError_title">The app has experienced an internal error.</string>
    <string name="userInfoError_title">Communication Error with database, Validation of user id failed.
        							You must validate your device before you can post. 
        							Do you wish to continue without validation?</string>
    <string name="userInfoHelp_title">You must be validated to use this feature!</string>
    <string name="userInfoHelp_retry">   Try again   </string>	
    <string name="userInfoHelp_cancel">   Continue unvalidated   </string>
    <string name="no_solutions_found">There doesn\'t seem to be any solutions</string>			
 	<string name="no_questions_found">There doesn\'t seem to be any questions</string>			
</resources>