<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  >

    <TextView
        android:id="@+id/title_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_toLeftOf="@+id/edit_solution_q"
        android:text="@string/title_post_descriptor"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
    <EditText
        android:id="@+id/edit_question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_question"
        android:layout_alignTop="@+id/title_descriptor"
        android:ems="10"
        android:hint="@string/edit_question_title_msg"> 
                <requestFocus /> </EditText> 
 
    <TextView
        android:id="@+id/question_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/edit_question_title"
        android:text="@string/question_post_descriptor"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
	
	<TextView
        android:id="@+id/choose_difficulty_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_question"
        android:layout_marginLeft="16dp"
        android:text="@string/difficulty_post_descriptor"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <RadioGroup
        android:id="@+id/goup_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_difficulty_descriptor"
        android:layout_centerHorizontal="true" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/difficulty_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/difficulty_easy"
        android:layout_alignBottom="@+id/difficulty_easy"
        android:layout_toRightOf="@+id/difficulty_easy"
        android:text="@string/radio_medium" 
        android:onClick="updateRadio"/>

    <RadioButton
        android:id="@+id/difficulty_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/difficulty_medium"
        android:layout_alignBottom="@+id/difficulty_medium"
        android:layout_toRightOf="@+id/difficulty_medium"
        android:text="@string/radio_hard" 
        android:onClick="updateRadio"/>

    <RadioButton
        android:id="@+id/difficulty_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignTop="@+id/goup_difficulty"
        android:checked="true"
        android:text="@string/radio_easy" 
        android:onClick="updateRadio"/>

    <TextView
        android:id="@+id/solution_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/difficulty_medium"
        android:text="@string/solution_post_descriptor"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edit_solution_q"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/edit_question"
        android:layout_alignTop="@+id/solution_descriptor"
        android:ems="10"
        android:hint="@string/edit_solution_msg" />
    
    <Button
        android:id="@+id/send_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="sendQuestion"
        android:text="@string/button_post" />

    <EditText
        android:id="@+id/edit_question"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/difficulty_medium"
        android:layout_alignTop="@+id/question_descriptor"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/edit_question_msg" >
    </EditText>
   
    <Spinner
        android:id="@+id/category_spinner_question"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/difficulty_medium"
        android:layout_below="@+id/category_descriptor" />
    
    <TextView
        android:id="@+id/category_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/solution_descriptor"
        android:layout_below="@+id/edit_solution_q"
        android:text="@string/category_post_descriptor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>