<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    style="@style/Layout">
	    <TextView android:id="@+id/question_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:layout_marginTop="16dp"
	        android:background="@drawable/listitem"
	        android:text="@string/error_displaying_question"
	        android:textSize="8pt" />
	
	    <EditText
	        android:id="@+id/edit_solution"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:layout_below="@+id/question_view"
	        android:layout_marginTop="16dp"
	        android:hint="@string/edit_solution_msg" >

	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/send_solution"
	        android:layout_width="wrap_content"
       		android:layout_height="40dp"
       		android:layout_alignParentBottom="true"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentRight="true"
	        android:onClick="sendSolution"
	        android:text="@string/button_post" />

</RelativeLayout>
