<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"  
    android:background="@color/white">
    
    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/retryDialog_title"
        android:textColor="@color/pitch_black" 
        android:textSize="10pt"
        android:focusable="false" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_text"
        android:layout_alignParentLeft="true"
        android:layout_margin="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/button"
        android:text="@string/retryDialog_cancel" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dialog_text"
        android:layout_margin="1dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/button_cancel"
        android:background="@color/button"
        android:text="@string/retryDialog_retry" />

</RelativeLayout>