<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/sliding_menu"
    android:layout_height="match_parent"
    android:id="@+id/sliding_menu_options" >
	    
   
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/spinner_difficulty_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true" />
    <Spinner
       	android:id="@+id/diff_spinner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content" 
       	android:layout_marginTop="40dp"
       	android:layout_gravity="right"
       	android:layout_alignParentRight="true"/>
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/spinner_category_text"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true" />
    <Spinner
       	android:id="@+id/category_spinner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content" 
       	android:layout_marginTop="80dp"
       	android:layout_gravity="right"
       	android:layout_alignParentRight="true"/>
    
	<Button
	    android:id="@+id/slide_menu_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="adjustSettings" 
	    android:text="@string/button_ok"
	    android:layout_centerInParent="true" 
	    android:layout_alignParentBottom="true"/>
	
</RelativeLayout>