<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    style="@style/Layout">

	<LinearLayout android:id="@+id/question_layout_main"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin">

	    <TextView android:id="@+id/question_text_view"
	        android:textIsSelectable="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
		    android:layout_marginTop="@dimen/activity_vertical_margin"
		    android:layout_marginBottom="@dimen/activity_vertical_margin"
		    android:background="@drawable/listitem">
		</TextView>

		<Button 
	        android:id="@+id/question_button_show_solutions"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:paddingLeft="16dp"
	        android:paddingRight="16dp"
	        android:text="@string/button_solutions"
	        android:layout_gravity="center_horizontal"
	        android:onClick="onShowSolutions"/>	        

		<LinearLayout android:id="@+id/solutionlist_outer"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_gravity="center_horizontal"
		    android:visibility="gone">
		    
			<LinearLayout android:id="@+id/solutionlist_inner"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_gravity="center_horizontal">
			</LinearLayout>
			
			<Button
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginTop="@dimen/activity_margin"
			    android:onClick="postSolution"
			    android:text="@string/button_post_solution" />
			
		</LinearLayout>
		
		<TextView android:id="@+id/solutionlist_none_found_text"
	        android:textIsSelectable="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
		    android:layout_marginTop="@dimen/activity_vertical_margin"
		    android:layout_marginBottom="@dimen/activity_vertical_margin"
		    android:text="@string/no_solutions_found"
		    android:textColor="@color/gold"
		    android:visibility="gone" />
		
		<include layout="@layout/loading_anim" />
	</LinearLayout>
</ScrollView>